# g_code_optimizer2

./: .gitignore  CMakeLists.txt
cmake/: RtTutorial.cmake
common/: io_gltf.h  rt_base.hpp
common/shaders/: foundation.slang
docs/: index.html
g_code_optimizer2/: CMakeLists.txt  aabb_compute.cpp  aabb_compute.hpp  custom_camera.cpp  custom_camera.hpp  g_code_optimizer2.cpp  python_volume_forwarder.cpp  python_volume_forwarder.hpp  stl.h  stl_utils.cpp  stl_utils.hpp  volume_integrate_compute.cpp  volume_integrate_compute.hpp  volumesum_compute.cpp  volumesum_compute.hpp
g_code_optimizer2/Algorithms/: Algorithm.cpp  Algorithm.hpp  AlgorithmRun.cpp  AlgorithmRun.hpp  AlgorithmSync.cpp  AlgorithmSync.hpp  BasicAlgorithm.cpp  BasicAlgorithm.hpp  DeterministicAlgorithm.cpp  DeterministicAlgorithm.hpp  FibonacciPoints.cpp  FibonacciPoints.hpp  HookeJeeves.cpp  HookeJeeves.hpp  MonteCarloAlgorithm.hpp  PythonAlgoSync.cpp  PythonAlgoSync.hpp  StochasticAlgorithm.cpp  StochasticAlgorithm.hpp  SyncInfo.hpp
g_code_optimizer2/config/: inputs_params.json
g_code_optimizer2/config/algorithms/: basic.json  deterministic.json  stochastic.json
g_code_optimizer2/include/: app_config.hpp  json_helpers.hpp
g_code_optimizer2/shaders/: aabb_compute.slang  rtbasic.slang  shaderio.h  volume_calculation_raster.slang  volume_calculation_rtx.slang  volume_integrate.slang  volumesum_compute.slang
python_extensions/: readme.md  requirements.txt
python_extensions/algos/: main.py
python_extensions/cura_slicer/: README.MD
python_extensions/visualizers/: sphere_volume_visualizer.py
(+4 files in other folders)
